Bug 142808 - UI: Tabstop jumps on ruler when placed on right triangle
Summary: UI: Tabstop jumps on ruler when placed on right triangle
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0 target:7.6.0.2 target:7...
Keywords: bibisected, regression
Depends on:
Blocks: Rulers
  Show dependency treegraph
 
Reported: 2021-06-11 21:37 UTC by mail2.0
Modified: 2023-08-13 15:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screencast_LO_7.1.4.2 (655.97 KB, video/mp4)
2021-06-29 14:38 UTC, mail2.0
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mail2.0 2021-06-11 21:37:28 UTC
Description:
In a paragraph with hanging (negative first line) indent, a tabstop that is moved exactly to the position of the right lower triangle on the ruler (by mouse-click & drag) is immediately shifted to the right (by the amount of hanging indent) upon release of the mouse button.

Steps to Reproduce:
1. Open a new text-document
2. On the ruler, use the mouse to drag the position of both the right page margin, as well as the right lower triangle (indent after text), just a little bit as to make sure they are snapped into a ruler-grid position
3. Move the upper left triangle to a position on the left of the lower left triangle
4. Insert a tab-stop by clicking into the ruler without releasing the mouse; then move the mouse directly on top of the right lower triangle and release

Actual Results:
The newly created tab-stop jumps to the right by the distance between the left upper- and the left lower triangle

Expected Results:
The newly created tab-stop should stay in the (cursor-) position where it was located when the mouse was released.


Reproducible: Always


User Profile Reset: No



Additional Info:
Note: Step (2.) is only necessary when the ruler grid is not yet aligned with the page margins, which often is the case.

This bug may cause the tabstop to disappear entirely from the ruler (namely, when the hanging indent happens to exceed the right page margin).

Version: 7.1.3.2 (x64) / LibreOffice Community
Build ID: 47f78053abe362b9384784d31a6e56f8511eb1c1
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 1 Dieter 2021-06-29 13:16:58 UTC
I can't confirm it with

Version: 7.1.4.1 (x64) / LibreOffice Community
Build ID: f67b1ddedeb24fca1c5938e7cebfab73d708b35b
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: threaded

Perhaps I haven't followed the steps correct. Would be helpful to have a screencast.
Comment 2 mail2.0 2021-06-29 14:38:09 UTC
Created attachment 173269 [details]
screencast_LO_7.1.4.2

Screencast with Libre Office 7.1.4.2

Version: 7.1.4.2 (x64) / LibreOffice Community
Build ID: a529a4fab45b75fefc5b6226684193eb000654f6
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 3 Dieter 2021-07-04 10:46:42 UTC
Thank you for the screencast. I can confirm it now, although I think, it is a very rare usecase.

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 949658028e722e5d2657b503eb20e16e41dbd8cf
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 4 mail2.0 2021-07-04 13:09:07 UTC
Dieter, thank you for the confirmation.

One particular use-case affected by this bug may not be *that* rare: Putting left- and right aligned text on the same line by placing a right tabstop on the right page margin*.

Doing so in a paragraph with hanging indent larger than the right page margin is particularly annoying, because the bug then causes the right tabstop to jump off the (visible part of the) ruler, leaving the poor user (a.k.a. me) with no clue about what is going on.


*) compare search-engine results for "left and right same line libre", for example https://ask.libreoffice.org/en/question/148017/some-text-flush-left-and-other-text-flush-right-on-same-line/
Comment 5 Sophie Sipasseuth 2023-06-29 13:37:52 UTC
No repro

Version: 6.0.0.0.alpha1+
Build ID: 6eeac3539ea4cac32d126c5e24141f262eb5a4d9
CPU threads: 4; OS: Windows 10.0; UI render: default; 
Locale: fr-FR (fr_FR); Calc: CL

No repro

Version: 6.1.7.0.0+
Build ID: 5b3765f4d881e7ddefd0c4aad6886a46f000b4fc
CPU threads: 4; OS: Windows 10.0; UI render: default; 
Locale: fr-FR (fr_FR); Calc: CL
Comment 6 Sophie Sipasseuth 2023-07-12 09:40:58 UTC
Repro

Version: 7.2.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: ff2ba77f22b2e96f96f5537aec1705956b47583d
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: fr-FR (fr_FR); UI: en-US
Calc: CL

Version: 7.3.8.0.0+ (x64) / LibreOffice Community
Build ID: e1ad83ddb2f39419fb5d7c69eba51e2b9f49c788
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: fr-FR (fr_FR); UI: en-US
Calc: CL

Version: 7.4.8.0.0+ (x64) / LibreOffice Community
Build ID: f8ba7c6f77497e2dc7bfef8378511e2074ce01f9
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: fr-FR (fr_FR); UI: en-US
Calc: CL

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 1c629ca0048670db4bed5e7d8d76bcf8e81f2158
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: fr-FR (fr_FR); UI: en-US
Calc: CL threaded
Comment 7 Sophie Sipasseuth 2023-07-12 09:42:28 UTC
In this version of LO, it is not possible to create a tabstop.

Version: 7.6.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 1b5cee822e0bc15ddbdfc86926678ca35ab3e082
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: fr-FR (fr_FR); UI: en-US
Calc: CL threaded
Comment 8 Stéphane Guillou (stragu) 2023-07-13 13:13:12 UTC
(In reply to Sophie Sipasseuth from comment #7)
> In this version of LO, it is not possible to create a tabstop.

Sophie, that has already been reported in bug 154035. Adding as a "see also".

Regarding the original issue, I reproduced in:

Version: 6.2.0.3
Build ID: 98c6a8a1c6c7b144ce3cc729e34964b47ce25d62
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3; 
Locale: en-AU (en_AU.UTF-8); UI-Language: en-US
Calc: threaded

I bibisected it with the linux-64-6.2 repository to commit 043fb2bf089d8f8c8a924ccf38b905f1ff55849c which is a range:

https://git.libreoffice.org/core/+log/b2cefc2e36925b4384eb0aea54aa2c6bcfb018a8..49c87270f7176312806d1759967c247a312f0acf

The likely culprit is:

commit 2da25cb43f4af8d094b01de1073eee2e2023c029
author	Mike Kaganski <mike.kaganski@collabora.com>	Sun Oct 14 23:52:18 2018 +0300
committer	Mike Kaganski <mike.kaganski@collabora.com>	Mon Oct 15 06:56:21 2018 +0200
tdf#120593: properly handle tab pos identical to right indent
Reviewed-on: https://gerrit.libreoffice.org/61768

Mike, a regression from fixing bug 120593, or a leftover that wasn't caught?
Comment 9 Mike Kaganski 2023-07-13 13:49:15 UTC
(In reply to Stéphane Guillou (stragu) from comment #8)
> Mike, a regression from fixing bug 120593, or a leftover that wasn't caught?

The former.

A hint: asking me without adding to CC is likely to not catch my attention ;-P - luckily the See Also bug did.
Comment 10 Stéphane Guillou (stragu) 2023-07-13 14:56:43 UTC
(In reply to Mike Kaganski from comment #9)
> A hint: asking me without adding to CC is likely to not catch my attention
> ;-P - luckily the See Also bug did.

The World conspires to make up for my slipups! :)
Comment 11 Mike Kaganski 2023-07-13 18:52:09 UTC
https://gerrit.libreoffice.org/c/core/+/154398
Comment 12 Commit Notification 2023-07-13 21:46:19 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a177a4474b8c31f44741e2834df2c76ea8074aa3

tdf#142808: use SvxLRSpaceItem::GetTextLeft instead of GetLeft

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2023-07-14 12:00:48 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/5ad6038fbe84ea1dc2d3f9e5dfc2747bf400e595

tdf#142808: use SvxLRSpaceItem::GetTextLeft instead of GetLeft

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2023-07-14 12:00:51 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/c2405fc7eca9cb90e64849fdcc549fbc4e38aa42

tdf#142808: use SvxLRSpaceItem::GetTextLeft instead of GetLeft

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Dieter 2023-08-13 15:21:27 UTC
VERIFIED with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e25e27c85ed970cdb97c468bdac86c80964f4231
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

Mike, thank you for fixing it!