tdf#142808: use SvxLRSpaceItem::GetTextLeft instead of GetLeft

Because we need the value without the negative (hanging) indent.

Change-Id: I65f779476be5e8a57b723c289c6c3a9c75875bb0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154398
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit a177a4474b8c31f44741e2834df2c76ea8074aa3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154419
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>